--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,51 @@
 }
 
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 .logo{
    width:162px;
    height:auto;
+}
+
+.dash {
+}
+
+.dash-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
+}
+
+.dash-head {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+}
+
+.dash-title {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.dash-desc {
+  font-size: 14px;
+  color: var(--color-text-secondary);
+}
+
+
+.dash-search{
+  padding:4px 10px;
+  border-radius:5px;
+  background-color: var(--bg-color-secondary);
+  height:fit-content;
+
+}
+.dash-search input{
+  border:none;
+  background-color: var(--bg-color-secondary);
+  color: var(--color-text-primary);
+  outline:none;
+}
+.dash-search input:placeholder{
+  color: var(--color-text-placeholder);
 }
