--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,19 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #F9F9F9;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --color-text-primary: #111111;
+  --color-text-secondary: #545454;
+  --color-text-placeholder: #A0A0A0;
+
+
+  --bg-color-primary: #F9F9F9;
+  --bg-color-secondary: #F3F3F4;
 }
 
 a {
@@ -33,7 +39,7 @@ body {
   margin: 0;
   min-width: 280px;
   min-height: 100vh;
-
+  color: var(--color-text-primary);
 
 }
 
