--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 }
 
 
+
 .logo{
    width:162px;
    height:auto;
@@ -39,11 +40,13 @@
 
 
 .dash-search{
-  padding:4px 10px;
+  padding:10px 10px;
   border-radius:5px;
   background-color: var(--bg-color-secondary);
   height:fit-content;
-
+  display: flex;
+  align-items: center;
+  gap:5px;
 }
 .dash-search input{
   border:none;
@@ -54,3 +57,107 @@
 .dash-search input:placeholder{
   color: var(--color-text-placeholder);
 }
+.dash-search .dash-search-icon{
+  font-size: 16px;
+  color: var(--color-text-secondary);
+}
+
+.dash-filters{
+  margin-top: 20px;
+  display: flex;
+  justify-content:flex-start;
+  align-items:center;
+  gap:10px;
+  background-color: white;
+  padding:5px 10px;
+  margin-bottom:5px;
+}
+
+.dash-select{
+  padding:6px;
+  display: flex;
+  align-items: center;
+  gap:5px;
+  border: 1px solid var(--bg-color-tertiary);
+  border-radius: 5px;
+}
+
+.dash-select select{
+  border:none;
+  background-color:transparent;
+  color: var(--color-text-secondary);
+  font-weight: 400;
+  font-size: 14px;
+  min-width: 100px;
+  max-width:200px;
+}
+
+.dash-select .dash-select-icon {
+  font-size: 14px;
+  color: var(--color-text-secondary);
+}
+
+.dash-select .dash-select-icon.tilted {
+  transform: rotate(45deg);
+}
+
+.table-base {
+  width: 100%;
+}
+
+.table-head{
+  background-color: white;
+  height:40px;
+}
+
+.table-head-item {
+  text-align: left;
+  font-weight: 400;
+  font-size: 18px;
+  padding: 12px 16px;
+  color: var(--color-text-tertiary);
+
+}
+
+.table-head-item:first-child {
+  padding-left:20px;
+}
+.table-head-item:last-child {
+  padding-right:20px;
+}
+
+
+.table-row {
+  background-color: white;
+  border-bottom: 1px solid var(--bg-color-secondary);
+}
+.table-row:first-child{
+  border-top: 1px solid var(--bg-color-secondary);
+}
+
+
+.table-row:nth-child(even){
+  border-bottom: 1px solid var(--bg-color-secondary);
+}
+
+.table-cell {
+  text-align: left;
+  padding: 12px 16px;
+  font-size:15px;
+}
+
+.table-cell:first-child{
+  padding-left:20px;
+}
+
+ .table-cell:last-child{
+  text-align: center;
+  padding-right:20px;
+}
+.table-checkbox {
+  width: 14px;
+  height: 14px;
+  /* accent-color: var(--color-text-primary); */
+  cursor: pointer;
+}
+
