--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   background-color: #F9F9F9;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,10 +20,16 @@
   --color-text-primary: #111111;
   --color-text-secondary: #545454;
   --color-text-placeholder: #A0A0A0;
-
+  --color-text-tertiary: #7E7E7E;
+ 
 
   --bg-color-primary: #F9F9F9;
   --bg-color-secondary: #F3F3F4;
+  --bg-color-tertiary: #CFD4DA;
+}
+
+input{
+  background-color:white;
 }
 
 a {
@@ -33,6 +39,13 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+select {
+  background-color: white;
+  color:black;
+  outline:none;
+
 }
 
 body {
@@ -49,24 +62,15 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-  
+  background-color: transparent;
+  border: none;
+  outline: none;  
 }
-button:hover {
-  border-color: #646cff;
+table{
+  border-collapse: collapse;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -76,7 +80,5 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
-  }
+  
 }
