feat: delete selected rows

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,13 @@
   --color-text-secondary: #545454;
   --color-text-placeholder: #A0A0A0;
   --color-text-tertiary: #7E7E7E;
+
+  --color-green-100: #E5F4EF;
+  --color-green-300: #019263;
+
+  --color-grey-100:#F0F0F0;
+  --color-grey-300:#545454;
+
  
 
   --bg-color-primary: #F9F9F9;
